--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }(window, document, 'script',
       'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1354452365148940');
-    fbq('track', 'PageView');
+    fbq('track', 'Visualizou a página');
   </script>
   <noscript>
     <img height="1" width="1" src="https://www.facebook.com/tr?id=1354452365148940&ev=PageView
