--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Selfit Academias</title>
-</head>
 
-<body>
-  <!-- Facebook Pixel Code -->
+  <!-- Meta Pixel Code -->
   <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -22,14 +20,15 @@
       s.parentNode.insertBefore(t, s)
     }(window, document, 'script',
       'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1354452365148940');
+    fbq('init', '985056673230594');
     fbq('track', 'PageView');
   </script>
-  <noscript>
-    <img height="1" width="1" src="https://www.facebook.com/tr?id=1354452365148940&ev=PageView
-  &noscript=1" />
-  </noscript>
-  <!-- End Facebook Pixel Code -->
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=985056673230594&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
+</head>
+
+<body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
