pixel e remoção zap

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script type="module" src="/src/main.ts"></script>
 
   <!-- Meta Pixel Code -->
-  <script defer>
+  <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
@@ -25,12 +25,11 @@
       s.parentNode.insertBefore(t, s)
     }(window, document, 'script',
       'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '985056673230594');
+    fbq('init', '3783837618554436');
     fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=985056673230594&ev=PageView&noscript=1" />
-  </noscript>
+      src="https://www.facebook.com/tr?id=3783837618554436&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
 
 </body>
