"Added Google tag event snippet for Compra conversion page"

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
   </script>
   <!-- End Meta Pixel Code -->
 
+  <!-- Event snippet for Compra conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-16598474973/bb8QCLma7LcZEN3B4uo9',
+      'value': 1.0,
+      'currency': 'BRL',
+      'transaction_id': ''
+    });
+  </script>
 </head>
 
 <body>
