"Added 'defer' attribute to two script tags in index.html"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   <!-- Meta Pixel Code -->
-  <script>
+  <script defer>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
@@ -29,7 +29,7 @@
   <!-- End Meta Pixel Code -->
 
   <!-- Google Tag Manager (zap) -->
-  <script>
+  <script defer>
     (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
