--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <div class="floater-whatsapp">
     <a
-      href="https://api.whatsapp.com/send/?phone=558130481279&amp;text=Olá!+Gostaria+de+treinar+na Selfit&amp;type=phone_number&amp;app_absent=0">
+      href="https://api.whatsapp.com/send/?phone=558130481279&amp;source=google_ads&conversion_id=16598474973&conversion_label=Tn9XCJyErsAZEN3B4uo9&;text=Olá!+Gostaria+de+treinar+na Selfit&amp;type=phone_number&amp;app_absent=0">
       <i>
         <svg class="w-[60px] h-[60px] bg-[#25D366] rounded-full bg-black fixed bottom-5 right-5" viewBox="0 0 24 24"
           fill="none" xmlns="http://www.w3.org/2000/svg">
