"Moved Google Tag Manager script to above Google Ads tag and removed duplicate script block"

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16598474973">
 
+    // Google Tag Manager
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-PSFK8LTF');
+
     // Google Ads tag (gtag.js)
     window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-16598474973');
 
@@ -21,6 +31,10 @@
       'currency': 'BRL',
       'transaction_id': ''
     });
+
+  </script>
+
+  <script>
 
     // Meta Pixel Code
     !function (f, b, e, v, n, t, s) {
@@ -36,16 +50,6 @@
       'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '3783837618554436');
     fbq('track', 'PageView');
-
-    // Google Tag Manager
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-PSFK8LTF');
   </script>
 </head>
 
