--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Selfit Academias</title>
 
   <link href="./src/assets/css/output.css" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
